Fix weird alignment issue with posts such as about Haiti on 10/13/16

--- a/style.css
+++ b/style.css
@@ -113,27 +113,27 @@ ul {
 	padding: 0;
 }
 h1 {
+	margin: 0;
 	padding: 0;
-	margin: 0 0 6px 0;
 	font-weight: normal;
 	line-height: 1;
 }
 h2 {
-	margin: 8px 0 6px 0;
+	margin: 0;
 	padding: 0;
 	font-weight: normal;
 	line-height: 1;
 	border: none;
 }
 h3 {
-	margin: 8px 0 6px 0;
+	margin: 0;
 	padding: 0;
 	font-weight: bold;
 	line-height: 1;
 	border: none;
 }
 h4 {
-	margin: 8px 0 5px 0;
+	margin: 0;
 	padding: 0;
 	font-weight: bold;
 	line-height: 1;
